<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:padding="10dp"
    android:orientation="vertical">
    <TableRow android:layout_gravity="center">
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="18sp"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/input_you_account"
            android:textSize="15sp"
            android:id="@+id/account"
            android:maxLines="1" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:id="@+id/password"
            android:hint="@string/input_you_password"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </TableRow>
    <TableRow>
        <Button
           android:id="@+id/login"
            android:text="@string/login"
            android:layout_height="wrap_content"
            android:layout_span="2"/>
    </TableRow>
</TableLayout>